gc causes legend

--- a/notebooks/gc-log-interpreter.ipynb
+++ b/notebooks/gc-log-interpreter.ipynb
@@ -352,6 +352,22 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "11190c0a-8a38-429a-914a-c76488bd5b66",
+   "metadata": {},
+   "source": [
+    "| Column      | Description |\n",
+    "| --------------------------------------------------------------- | --------------------------------------------------------------- |\n",
+    "| type        | Title       |\n",
+    "| event_type  | Text        |\n",
+    "| startedAt   | Text        |\n",
+    "| duration    | Text        |\n",
+    "| cause       | Text        | \n",
+    "### GC Causes - _(screen from artcicle[Monday with JVM logs - G1GC Stop-the-world phases](https://krzysztofslusarski.github.io/2021/08/10/monday-phases.html))_\n",
+    "![](gc_causes.png)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 24,
    "id": "4b6c0568",
