--- a/notebooks/gc-log-interpreter.ipynb
+++ b/notebooks/gc-log-interpreter.ipynb
@@ -358,10 +358,10 @@
    "source": [
     "| Column      | Description |\n",
     "| --------------------------------------------------------------- | --------------------------------------------------------------- |\n",
-    "| type        | Title       |\n",
-    "| event_type  | Text        |\n",
-    "| startedAt   | Text        |\n",
-    "| duration    | Text        |\n",
+    "| type        | GC Event - visualized in [this chart](https://github.com/microsoft/gctoolkit/blob/main/images/GCToolkit_Events.png) as a G1GCEvent family |\n",
+    "| event_type  | High level type - PauseEvent vs ConcurrentEvent                                                                                           |\n",
+    "| startedAt   | Timestamp                                                                                                                                 |\n",
+    "| duration    | Phase duration (in millis)        |\n",
     "| cause       | Text        | \n",
     "### GC Causes - _(screen from artcicle[Monday with JVM logs - G1GC Stop-the-world phases](https://krzysztofslusarski.github.io/2021/08/10/monday-phases.html))_\n",
     "![](gc_causes.png)"
