--- a/notebooks/gc-log-interpreter.ipynb
+++ b/notebooks/gc-log-interpreter.ipynb
@@ -356,15 +356,25 @@
    "id": "11190c0a-8a38-429a-914a-c76488bd5b66",
    "metadata": {},
    "source": [
-    "| Column      | Description |\n",
-    "| --------------------------------------------------------------- | --------------------------------------------------------------- |\n",
-    "| type        | GC Event - visualized in [this chart](https://github.com/microsoft/gctoolkit/blob/main/images/GCToolkit_Events.png) as a G1GCEvent family |\n",
-    "| event_type  | High level type - PauseEvent vs ConcurrentEvent                                                                                           |\n",
-    "| startedAt   | Timestamp                                                                                                                                 |\n",
-    "| duration    | Phase duration (in millis)        |\n",
-    "| cause       | Text        | \n",
-    "### GC Causes - _(screen from artcicle[Monday with JVM logs - G1GC Stop-the-world phases](https://krzysztofslusarski.github.io/2021/08/10/monday-phases.html))_\n",
-    "![](gc_causes.png)"
+    "\n",
+    "###\n",
+    "![](data_structure_main_columns.png)\n",
+    "\n",
+    "#### Type (GC Event) \n",
+    "Event type - is visualized on [this chart] (https://github.com/microsoft/gctoolkit/blob/main/images/GCToolkit_Events.png) as a G1GcEvent family\n",
+    "\n",
+    "#### GC Causes - _(screen from artcicle [Monday with JVM logs - G1GC Stop-the-world phases](https://krzysztofslusarski.github.io/2021/08/10/monday-phases.html))_\n",
+    "![](gc_causes.png)\n",
+    "\n",
+    "#### Based on these columns we can perform many useful aggregations and visualisations!\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6e5311dd-6540-4ec5-991e-9c24681efb09",
+   "metadata": {},
+   "source": [
+    "### Analysis of GC phases and causes"
    ]
   },
   {
