document structure fix

--- a/notebooks/gc-log-interpreter.ipynb
+++ b/notebooks/gc-log-interpreter.ipynb
@@ -5,7 +5,7 @@
    "id": "68f86608-cf52-44ea-8114-ad93b98f948d",
    "metadata": {},
    "source": [
-    "## Garbage Collector Essentials\n",
+    "# Part I - Garbage Collector Essentials\n",
     "\n",
     "Exellent articles about GC Log Anathomy:\n",
     " - [Java,JVM Logs, GC Logs, G1GC -Monday with JVM logs - G1GC Stop-the-world phases](https://krzysztofslusarski.github.io/2021/08/10/monday-phases.html)\n",
@@ -346,7 +346,7 @@
     }
    },
    "source": [
-    "## Events data structure\n",
+    "# Part II - Events data structure\n",
     "\n",
     "*(Now we can use SQL - like DSL to imported data examinations). It's kotlin dataframe feature.*\n"
    ]
@@ -374,7 +374,7 @@
    "id": "6e5311dd-6540-4ec5-991e-9c24681efb09",
    "metadata": {},
    "source": [
-    "### Analysis of GC phases and causes"
+    "# Part III - Analysis of GC performing"
    ]
   },
   {
