--- a/notebooks/gc-log-interpreter.ipynb
+++ b/notebooks/gc-log-interpreter.ipynb
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "id": "50767045",
    "metadata": {
     "ExecuteTime": {
@@ -369,369 +369,32 @@
     {
      "data": {
       "text/plain": [
-       "[                            type\n",
-       "  0                        Young\n",
-       "  1                        Young\n",
-       "  2                        Young\n",
-       "  3                        Young\n",
-       "  4                        Young\n",
-       "  5                        Young\n",
-       "  6                        Young\n",
-       "  7                        Young\n",
-       "  8                        Young\n",
-       "  9         G1GCYoungInitialMark\n",
-       " 10      G1GCConcurrentUndoCycle\n",
-       " 11 ConcurrentCleanupForNextMark\n",
-       " 12                        Young\n",
-       " 13                        Young\n",
-       " 14                        Young\n",
-       " 15                        Young\n",
-       " 16                        Young\n",
-       " 17                        Young\n",
-       " 18         G1GCYoungInitialMark\n",
-       " 19      G1GCConcurrentUndoCycle\n",
-       "...\n",
-       ",          event_type\n",
-       "  0      PauseEvent\n",
-       "  1      PauseEvent\n",
-       "  2      PauseEvent\n",
-       "  3      PauseEvent\n",
-       "  4      PauseEvent\n",
-       "  5      PauseEvent\n",
-       "  6      PauseEvent\n",
-       "  7      PauseEvent\n",
-       "  8      PauseEvent\n",
-       "  9      PauseEvent\n",
-       " 10 ConcurrentEvent\n",
-       " 11 ConcurrentEvent\n",
-       " 12      PauseEvent\n",
-       " 13      PauseEvent\n",
-       " 14      PauseEvent\n",
-       " 15      PauseEvent\n",
-       " 16      PauseEvent\n",
-       " 17      PauseEvent\n",
-       " 18      PauseEvent\n",
-       " 19 ConcurrentEvent\n",
-       "...\n",
-       ",                    startedAt\n",
-       "  0 2023-07-18T16:38:34.550Z\n",
-       "  1 2023-07-18T16:38:40.761Z\n",
-       "  2 2023-07-18T16:38:47.252Z\n",
-       "  3 2023-07-18T16:38:53.418Z\n",
-       "  4 2023-07-18T16:38:58.973Z\n",
-       "  5 2023-07-18T16:39:04.665Z\n",
-       "  6 2023-07-18T16:39:10.505Z\n",
-       "  7 2023-07-18T16:39:15.615Z\n",
-       "  8 2023-07-18T16:39:21.262Z\n",
-       "  9 2023-07-18T16:39:26.095Z\n",
-       " 10 2023-07-18T16:39:26.104Z\n",
-       " 11 2023-07-18T16:39:26.104Z\n",
-       " 12 2023-07-18T16:39:33.385Z\n",
-       " 13 2023-07-18T16:39:39.429Z\n",
-       " 14 2023-07-18T16:39:45.274Z\n",
-       " 15 2023-07-18T16:39:51.058Z\n",
-       " 16 2023-07-18T16:39:57.673Z\n",
-       " 17 2023-07-18T16:40:03.787Z\n",
-       " 18 2023-07-18T16:40:07.412Z\n",
-       " 19 2023-07-18T16:40:07.419Z\n",
-       "...\n",
-       ",     duration\n",
-       "  0 0,007961\n",
-       "  1 0,007288\n",
-       "  2 0,007701\n",
-       "  3 0,006213\n",
-       "  4 0,007023\n",
-       "  5 0,008063\n",
-       "  6 0,006614\n",
-       "  7 0,009664\n",
-       "  8 0,006702\n",
-       "  9 0,009153\n",
-       " 10 0,002713\n",
-       " 11 0,002684\n",
-       " 12 0,007018\n",
-       " 13 0,007426\n",
-       " 14 0,006734\n",
-       " 15 0,007435\n",
-       " 16 0,008182\n",
-       " 17 0,006963\n",
-       " 18 0,007265\n",
-       " 19 0,001260\n",
-       "...\n",
-       ",                       cause\n",
-       "  0     G1_EVACUATION_PAUSE\n",
-       "  1     G1_EVACUATION_PAUSE\n",
-       "  2     G1_EVACUATION_PAUSE\n",
-       "  3     G1_EVACUATION_PAUSE\n",
-       "  4     G1_EVACUATION_PAUSE\n",
-       "  5     G1_EVACUATION_PAUSE\n",
-       "  6     G1_EVACUATION_PAUSE\n",
-       "  7     G1_EVACUATION_PAUSE\n",
-       "  8     G1_EVACUATION_PAUSE\n",
-       "  9 G1_HUMONGOUS_ALLOCATION\n",
-       " 10         GCCAUSE_NOT_SET\n",
-       " 11         UNKNOWN_GCCAUSE\n",
-       " 12     G1_EVACUATION_PAUSE\n",
-       " 13     G1_EVACUATION_PAUSE\n",
-       " 14     G1_EVACUATION_PAUSE\n",
-       " 15     G1_EVACUATION_PAUSE\n",
-       " 16     G1_EVACUATION_PAUSE\n",
-       " 17     G1_EVACUATION_PAUSE\n",
-       " 18 G1_HUMONGOUS_ALLOCATION\n",
-       " 19         GCCAUSE_NOT_SET\n",
-       "...\n",
-       ",     cpu_user\n",
-       "  0     0,02\n",
-       "  1     0,01\n",
-       "  2     0,01\n",
-       "  3     0,01\n",
-       "  4     0,01\n",
-       "  5     0,01\n",
-       "  6     0,01\n",
-       "  7     0,01\n",
-       "  8     0,01\n",
-       "  9     0,01\n",
-       " 10     0,00\n",
-       " 11     0,00\n",
-       " 12     0,01\n",
-       " 13     0,01\n",
-       " 14     0,01\n",
-       " 15     0,02\n",
-       " 16     0,01\n",
-       " 17     0,01\n",
-       " 18     0,02\n",
-       " 19     0,00\n",
-       "...\n",
-       ",     cpu_kernel\n",
-       "  0       0,00\n",
-       "  1       0,00\n",
-       "  2       0,00\n",
-       "  3       0,00\n",
-       "  4       0,00\n",
-       "  5       0,00\n",
-       "  6       0,00\n",
-       "  7       0,00\n",
-       "  8       0,00\n",
-       "  9       0,00\n",
-       " 10       0,00\n",
-       " 11       0,00\n",
-       " 12       0,00\n",
-       " 13       0,00\n",
-       " 14       0,00\n",
-       " 15       0,00\n",
-       " 16       0,00\n",
-       " 17       0,01\n",
-       " 18       0,00\n",
-       " 19       0,00\n",
-       "...\n",
-       ",     cpu_wallClock\n",
-       "  0          0,01\n",
-       "  1          0,01\n",
-       "  2          0,01\n",
-       "  3          0,00\n",
-       "  4          0,01\n",
-       "  5          0,01\n",
-       "  6          0,01\n",
-       "  7          0,01\n",
-       "  8          0,01\n",
-       "  9          0,01\n",
-       " 10          0,00\n",
-       " 11          0,00\n",
-       " 12          0,01\n",
-       " 13          0,00\n",
-       " 14          0,01\n",
-       " 15          0,00\n",
-       " 16          0,01\n",
-       " 17          0,01\n",
-       " 18          0,01\n",
-       " 19          0,00\n",
-       "...\n",
-       ",     heap_occupancy_before_coll\n",
-       "  0                     742400\n",
-       "  1                     751616\n",
-       "  2                     745472\n",
-       "  3                     746496\n",
-       "  4                     733184\n",
-       "  5                     780288\n",
-       "  6                     761856\n",
-       "  7                     743424\n",
-       "  8                     771072\n",
-       "  9                     763904\n",
-       " 10                          0\n",
-       " 11                          0\n",
-       " 12                     752640\n",
-       " 13                     764928\n",
-       " 14                     735232\n",
-       " 15                     735232\n",
-       " 16                     756736\n",
-       " 17                     765952\n",
-       " 18                     566272\n",
-       " 19                          0\n",
-       "...\n",
-       ",     heap_occupancy_after_coll\n",
-       "  0                    177152\n",
-       "  1                    177152\n",
-       "  2                    178176\n",
-       "  3                    177152\n",
-       "  4                    178176\n",
-       "  5                    178176\n",
-       "  6                    178176\n",
-       "  7                    178176\n",
-       "  8                    178176\n",
-       "  9                    181248\n",
-       " 10                         0\n",
-       " 11                         0\n",
-       " 12                    178176\n",
-       " 13                    179200\n",
-       " 14                    179200\n",
-       " 15                    179200\n",
-       " 16                    179200\n",
-       " 17                    179200\n",
-       " 18                    179200\n",
-       " 19                         0\n",
-       "...\n",
-       ",     heap_size_before_coll\n",
-       "  0                921600\n",
-       "  1                921600\n",
-       "  2                921600\n",
-       "  3                921600\n",
-       "  4                921600\n",
-       "  5                921600\n",
-       "  6                921600\n",
-       "  7                921600\n",
-       "  8                921600\n",
-       "  9                921600\n",
-       " 10                     0\n",
-       " 11                     0\n",
-       " 12                921600\n",
-       " 13                921600\n",
-       " 14                921600\n",
-       " 15                921600\n",
-       " 16                921600\n",
-       " 17                921600\n",
-       " 18                921600\n",
-       " 19                     0\n",
-       "...\n",
-       ",     heap_size_after_coll\n",
-       "  0               921600\n",
-       "  1               921600\n",
-       "  2               921600\n",
-       "  3               921600\n",
-       "  4               921600\n",
-       "  5               921600\n",
-       "  6               921600\n",
-       "  7               921600\n",
-       "  8               921600\n",
-       "  9               921600\n",
-       " 10                    0\n",
-       " 11                    0\n",
-       " 12               921600\n",
-       " 13               921600\n",
-       " 14               921600\n",
-       " 15               921600\n",
-       " 16               921600\n",
-       " 17               921600\n",
-       " 18               921600\n",
-       " 19                    0\n",
-       "...\n",
-       ",     perm_or_meta_occupancy_before_coll\n",
-       "  0                             111660\n",
-       "  1                             111660\n",
-       "  2                             111660\n",
-       "  3                             111660\n",
-       "  4                             111660\n",
-       "  5                             111660\n",
-       "  6                             111660\n",
-       "  7                             111660\n",
-       "  8                             111660\n",
-       "  9                             111660\n",
-       " 10                                  0\n",
-       " 11                                  0\n",
-       " 12                             111660\n",
-       " 13                             111660\n",
-       " 14                             111840\n",
-       " 15                             111841\n",
-       " 16                             111841\n",
-       " 17                             111841\n",
-       " 18                             111841\n",
-       " 19                                  0\n",
-       "...\n",
-       ",     perm_or_meta_occupancy_after_coll\n",
-       "  0                            111660\n",
-       "  1                            111660\n",
-       "  2                            111660\n",
-       "  3                            111660\n",
-       "  4                            111660\n",
-       "  5                            111660\n",
-       "  6                            111660\n",
-       "  7                            111660\n",
-       "  8                            111660\n",
-       "  9                            111660\n",
-       " 10                                 0\n",
-       " 11                                 0\n",
-       " 12                            111660\n",
-       " 13                            111660\n",
-       " 14                            111840\n",
-       " 15                            111841\n",
-       " 16                            111841\n",
-       " 17                            111841\n",
-       " 18                            111841\n",
-       " 19                                 0\n",
-       "...\n",
-       ",     perm_or_meta_size_before_coll\n",
-       "  0                        112448\n",
-       "  1                        112448\n",
-       "  2                        112448\n",
-       "  3                        112448\n",
-       "  4                        112448\n",
-       "  5                        112448\n",
-       "  6                        112448\n",
-       "  7                        112448\n",
-       "  8                        112448\n",
-       "  9                        112448\n",
-       " 10                             0\n",
-       " 11                             0\n",
-       " 12                        112448\n",
-       " 13                        112448\n",
-       " 14                        112576\n",
-       " 15                        112576\n",
-       " 16                        112576\n",
-       " 17                        112576\n",
-       " 18                        112576\n",
-       " 19                             0\n",
-       "...\n",
-       ",     perm_or_meta_size_after_coll\n",
-       "  0                       112448\n",
-       "  1                       112448\n",
-       "  2                       112448\n",
-       "  3                       112448\n",
-       "  4                       112448\n",
-       "  5                       112448\n",
-       "  6                       112448\n",
-       "  7                       112448\n",
-       "  8                       112448\n",
-       "  9                       112448\n",
-       " 10                            0\n",
-       " 11                            0\n",
-       " 12                       112448\n",
-       " 13                       112448\n",
-       " 14                       112576\n",
-       " 15                       112576\n",
-       " 16                       112576\n",
-       " 17                       112576\n",
-       " 18                       112576\n",
-       " 19                            0\n",
-       "...\n",
-       "]"
+       "type: String\n",
+       "event_type: String\n",
+       "startedAt: kotlinx.datetime.Instant\n",
+       "duration: Double\n",
+       "cause: String\n",
+       "cpu_user: Double\n",
+       "cpu_kernel: Double\n",
+       "cpu_wallClock: Double\n",
+       "heap_occupancy_before_coll: Int\n",
+       "heap_occupancy_after_coll: Int\n",
+       "heap_size_before_coll: Int\n",
+       "heap_size_after_coll: Int\n",
+       "perm_or_meta_occupancy_before_coll: Int\n",
+       "perm_or_meta_occupancy_after_coll: Int\n",
+       "perm_or_meta_size_before_coll: Int\n",
+       "perm_or_meta_size_after_coll: Int"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "//list all columns\n",
-    "df.columns()\n"
+    "df.schema()\n"
    ]
   },
   {
