--- a/notebooks/gc-log-interpreter.ipynb
+++ b/notebooks/gc-log-interpreter.ipynb
@@ -405,22 +405,25 @@
     "\n",
     "### The most useful columns\n",
     "\n",
-    "#### 1. type - (GC Event type) \n",
+    "#### *1. type - (GC Event type)* \n",
     "Event type - is visualized on [this chart] (https://github.com/microsoft/gctoolkit/blob/main/images/GCToolkit_Events.png) as a G1GcEvent family\n",
     "\n",
-    "#### 2. event_type\n",
+    "#### *2. event_type*\n",
     "Column grouping stop-the-world and concurrent events. Allows calculation of pauses duration and comparation them with concurrent phases duration.\n",
     "\n",
-    "#### 3. startedAt \n",
+    "#### *3. startedAt* \n",
     "Timestamp\n",
     "\n",
-    "#### 4. duration \n",
+    "#### *4. duration* \n",
     "Phase duration **(in seconds!)**\n",
     "\n",
-    "#### 5. cause - GC causes - _(screen from artcicle [Monday with JVM logs - G1GC Stop-the-world phases](https://krzysztofslusarski.github.io/2021/08/10/monday-phases.html))_\n",
+    "#### *5. cause - GC causes* \n",
+    "\n",
+    "_(screen from artcicle [Monday with JVM logs - G1GC Stop-the-world phases](https://krzysztofslusarski.github.io/2021/08/10/monday-phases.html))_\n",
+    "\n",
     "![](gc_causes.png)\n",
     "\n",
-    "#### Summary \n",
+    "#### *Summary* \n",
     "**Based on these columns we can perform many useful aggregations and visualisations!**\n"
    ]
   },
