--- a/notebooks/gc-log-interpreter.ipynb
+++ b/notebooks/gc-log-interpreter.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 27,
    "id": "237fd38c-6a5c-470d-9a2c-f62ccbe71f04",
    "metadata": {
     "ExecuteTime": {
@@ -37,273 +37,11 @@
      "outputs_hidden": false
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": []
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "            <div id=\"kotlin_out_0\"></div>\n",
-       "            <script type=\"text/javascript\">\n",
-       "                            if(!window.kotlinQueues) {\n",
-       "                window.kotlinQueues = {};\n",
-       "            }\n",
-       "            if(!window.kotlinQueues[\"kandyLetsPlot\"]) {\n",
-       "                var resQueue = [];\n",
-       "                window.kotlinQueues[\"kandyLetsPlot\"] = resQueue;\n",
-       "                window[\"call_kandyLetsPlot\"] = function(f) {\n",
-       "                    resQueue.push(f);\n",
-       "                }\n",
-       "            }\n",
-       "            (function (){\n",
-       "                var modifiers = [(function(script) {\n",
-       "    script.src = \"https://cdn.jsdelivr.net/gh/JetBrains/lets-plot@v3.1.0/js-package/distr/lets-plot.min.js\"\n",
-       "    script.type = \"text/javascript\";\n",
-       "})];\n",
-       "                var e = document.getElementById(\"kotlin_out_0\");\n",
-       "                modifiers.forEach(function (gen) {\n",
-       "                    var script = document.createElement(\"script\");\n",
-       "                    gen(script)\n",
-       "                    script.addEventListener(\"load\", function() {\n",
-       "                        window[\"call_kandyLetsPlot\"] = function(f) {f();};\n",
-       "                        window.kotlinQueues[\"kandyLetsPlot\"].forEach(function(f) {f();});\n",
-       "                        window.kotlinQueues[\"kandyLetsPlot\"] = [];\n",
-       "                    }, false);\n",
-       "                    script.addEventListener(\"error\", function() {\n",
-       "                        window[\"call_kandyLetsPlot\"] = function(f) {};\n",
-       "                        window.kotlinQueues[\"kandyLetsPlot\"] = [];\n",
-       "                        var div = document.createElement(\"div\");\n",
-       "                        div.style.color = 'darkred';\n",
-       "                        div.textContent = 'Error loading resource kandyLetsPlot';\n",
-       "                        document.getElementById(\"kotlin_out_0\").appendChild(div);\n",
-       "                    }, false);\n",
-       "                    \n",
-       "                    e.appendChild(script);\n",
-       "                });\n",
-       "            })();\n",
-       "            </script>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "            <div id=\"kotlin_out_1\"></div>\n",
-       "            <script type=\"text/javascript\">\n",
-       "                            if(!window.kotlinQueues) {\n",
-       "                window.kotlinQueues = {};\n",
-       "            }\n",
-       "            if(!window.kotlinQueues[\"DataFrame\"]) {\n",
-       "                var resQueue = [];\n",
-       "                window.kotlinQueues[\"DataFrame\"] = resQueue;\n",
-       "                window[\"call_DataFrame\"] = function(f) {\n",
-       "                    resQueue.push(f);\n",
-       "                }\n",
-       "            }\n",
-       "            (function (){\n",
-       "                var modifiers = [(function(script) {\n",
-       "    script.src = \"https://cdn.jsdelivr.net/gh/Kotlin/dataframe@3db46ccccaa1291c0627307d64133317f545e6ae/core/src/main/resources/init.js\"\n",
-       "    script.type = \"text/javascript\";\n",
-       "})];\n",
-       "                var e = document.getElementById(\"kotlin_out_1\");\n",
-       "                modifiers.forEach(function (gen) {\n",
-       "                    var script = document.createElement(\"script\");\n",
-       "                    gen(script)\n",
-       "                    script.addEventListener(\"load\", function() {\n",
-       "                        window[\"call_DataFrame\"] = function(f) {f();};\n",
-       "                        window.kotlinQueues[\"DataFrame\"].forEach(function(f) {f();});\n",
-       "                        window.kotlinQueues[\"DataFrame\"] = [];\n",
-       "                    }, false);\n",
-       "                    script.addEventListener(\"error\", function() {\n",
-       "                        window[\"call_DataFrame\"] = function(f) {};\n",
-       "                        window.kotlinQueues[\"DataFrame\"] = [];\n",
-       "                        var div = document.createElement(\"div\");\n",
-       "                        div.style.color = 'darkred';\n",
-       "                        div.textContent = 'Error loading resource DataFrame';\n",
-       "                        document.getElementById(\"kotlin_out_1\").appendChild(div);\n",
-       "                    }, false);\n",
-       "                    \n",
-       "                    e.appendChild(script);\n",
-       "                });\n",
-       "            })();\n",
-       "            </script>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "                <style>\n",
-       "                :root {\n",
-       "    --background: #fff;\n",
-       "    --background-odd: #f5f5f5;\n",
-       "    --background-hover: #d9edfd;\n",
-       "    --header-text-color: #474747;\n",
-       "    --text-color: #848484;\n",
-       "    --text-color-dark: #000;\n",
-       "    --text-color-medium: #737373;\n",
-       "    --text-color-pale: #b3b3b3;\n",
-       "    --inner-border-color: #aaa;\n",
-       "    --bold-border-color: #000;\n",
-       "    --link-color: #296eaa;\n",
-       "    --link-color-pale: #296eaa;\n",
-       "    --link-hover: #1a466c;\n",
-       "}\n",
-       "\n",
-       ":root[theme=\"dark\"], :root [data-jp-theme-light=\"false\"], .dataframe_dark{\n",
-       "    --background: #303030;\n",
-       "    --background-odd: #3c3c3c;\n",
-       "    --background-hover: #464646;\n",
-       "    --header-text-color: #dddddd;\n",
-       "    --text-color: #b3b3b3;\n",
-       "    --text-color-dark: #dddddd;\n",
-       "    --text-color-medium: #b2b2b2;\n",
-       "    --text-color-pale: #737373;\n",
-       "    --inner-border-color: #707070;\n",
-       "    --bold-border-color: #777777;\n",
-       "    --link-color: #008dc0;\n",
-       "    --link-color-pale: #97e1fb;\n",
-       "    --link-hover: #00688e;\n",
-       "}\n",
-       "\n",
-       "p.dataframe_description {\n",
-       "    color: var(--text-color-dark);\n",
-       "}\n",
-       "\n",
-       "table.dataframe {\n",
-       "    font-family: \"Helvetica Neue\", Helvetica, Arial, sans-serif;\n",
-       "    font-size: 12px;\n",
-       "    background-color: var(--background);\n",
-       "    color: var(--text-color-dark);\n",
-       "    border: none;\n",
-       "    border-collapse: collapse;\n",
-       "}\n",
-       "\n",
-       "table.dataframe th, td {\n",
-       "    padding: 6px;\n",
-       "    border: 1px solid transparent;\n",
-       "    text-align: left;\n",
-       "}\n",
-       "\n",
-       "table.dataframe th {\n",
-       "    background-color: var(--background);\n",
-       "    color: var(--header-text-color);\n",
-       "}\n",
-       "\n",
-       "table.dataframe td {\n",
-       "    vertical-align: top;\n",
-       "}\n",
-       "\n",
-       "table.dataframe th.bottomBorder {\n",
-       "    border-bottom-color: var(--bold-border-color);\n",
-       "}\n",
-       "\n",
-       "table.dataframe tbody > tr:nth-child(odd) {\n",
-       "    background: var(--background-odd);\n",
-       "}\n",
-       "\n",
-       "table.dataframe tbody > tr:nth-child(even) {\n",
-       "    background: var(--background);\n",
-       "}\n",
-       "\n",
-       "table.dataframe tbody > tr:hover {\n",
-       "    background: var(--background-hover);\n",
-       "}\n",
-       "\n",
-       "table.dataframe a {\n",
-       "    cursor: pointer;\n",
-       "    color: var(--link-color);\n",
-       "    text-decoration: none;\n",
-       "}\n",
-       "\n",
-       "table.dataframe tr:hover > td a {\n",
-       "    color: var(--link-color-pale);\n",
-       "}\n",
-       "\n",
-       "table.dataframe a:hover {\n",
-       "    color: var(--link-hover);\n",
-       "    text-decoration: underline;\n",
-       "}\n",
-       "\n",
-       "table.dataframe img {\n",
-       "    max-width: fit-content;\n",
-       "}\n",
-       "\n",
-       "table.dataframe th.complex {\n",
-       "    background-color: var(--background);\n",
-       "    border: 1px solid var(--background);\n",
-       "}\n",
-       "\n",
-       "table.dataframe .leftBorder {\n",
-       "    border-left-color: var(--inner-border-color);\n",
-       "}\n",
-       "\n",
-       "table.dataframe .rightBorder {\n",
-       "    border-right-color: var(--inner-border-color);\n",
-       "}\n",
-       "\n",
-       "table.dataframe .rightAlign {\n",
-       "    text-align: right;\n",
-       "}\n",
-       "\n",
-       "table.dataframe .expanderSvg {\n",
-       "    width: 8px;\n",
-       "    height: 8px;\n",
-       "    margin-right: 3px;\n",
-       "}\n",
-       "\n",
-       "table.dataframe .expander {\n",
-       "    display: flex;\n",
-       "    align-items: center;\n",
-       "}\n",
-       "\n",
-       "/* formatting */\n",
-       "\n",
-       "table.dataframe .null {\n",
-       "    color: var(--text-color-pale);\n",
-       "}\n",
-       "\n",
-       "table.dataframe .structural {\n",
-       "    color: var(--text-color-medium);\n",
-       "    font-weight: bold;\n",
-       "}\n",
-       "\n",
-       "table.dataframe .dataFrameCaption {\n",
-       "    font-weight: bold;\n",
-       "}\n",
-       "\n",
-       "table.dataframe .numbers {\n",
-       "    color: var(--text-color-dark);\n",
-       "}\n",
-       "\n",
-       "table.dataframe td:hover .formatted .structural, .null {\n",
-       "    color: var(--text-color-dark);\n",
-       "}\n",
-       "\n",
-       "table.dataframe tr:hover .formatted .structural, .null {\n",
-       "    color: var(--text-color-dark);\n",
-       "}\n",
-       "\n",
-       "\n",
-       "                </style>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%use kandy(0.4.4)\n",
     "%use dataframe(0.11.0)\n",
+    "%use kotlin-statistics(1.2.1)\n",
     "import org.jetbrains.kotlinx.dataframe.io.readCSV\n",
     "\n",
     "//import all gc events from csv file (file was generated via gc-log-wizard application)\n",
@@ -346,6 +84,30 @@
     "    }\n",
     "    blankAxes()\n",
     "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "6a9621cd-094e-4c44-8e0d-37b338d1a654",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "85.4"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "val myList = listOf(34, 42, 51, 65, 69, 74, 78, 84, 85, 85, 86, 87)\n",
+    "\n",
+    "\n",
+    "myList.percentile(80.0)"
    ]
   },
   {
@@ -1204,6 +966,47 @@
     "        title=\"GC phases - percentage\"\n",
     "    }\n",
     " }"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "5b05065d-6791-400c-88af-a307c850c04e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Line_85.jupyter.kts (1:1 - 15) None of the following functions can be called with the arguments supplied: \n",
+      "public abstract operator fun get(index: Int): DataRow<Line_9_jupyter._DataFrameType> defined in org.jetbrains.kotlinx.dataframe.DataFrame\n",
+      "public open operator fun get(firstIndex: Int, vararg otherIndices: Int): DataFrame<Line_9_jupyter._DataFrameType> defined in org.jetbrains.kotlinx.dataframe.DataFrame\n",
+      "public open fun get(columnName: String): AnyCol /* = DataColumn<*> */ defined in org.jetbrains.kotlinx.dataframe.DataFrame\n",
+      "public open operator fun get(first: String, vararg other: String): DataFrame<Line_9_jupyter._DataFrameType> defined in org.jetbrains.kotlinx.dataframe.DataFrame\n",
+      "public open operator fun get(indices: Iterable<Int>): DataFrame<Line_9_jupyter._DataFrameType> defined in org.jetbrains.kotlinx.dataframe.DataFrame\n",
+      "public open operator fun get(columnRange: ClosedRange<String>): DataFrame<Line_9_jupyter._DataFrameType> defined in org.jetbrains.kotlinx.dataframe.DataFrame\n",
+      "public open operator fun get(range: IntRange): DataFrame<Line_9_jupyter._DataFrameType> defined in org.jetbrains.kotlinx.dataframe.DataFrame\n",
+      "public open operator fun get(first: IntRange, vararg ranges: IntRange): DataFrame<Line_9_jupyter._DataFrameType> defined in org.jetbrains.kotlinx.dataframe.DataFrame\n",
+      "public open fun <R> get(column: KProperty<TypeVariable(R)>): DataColumn<TypeVariable(R)> defined in org.jetbrains.kotlinx.dataframe.DataFrame\n",
+      "public open fun <R> get(column: KProperty<DataFrame<TypeVariable(R)>>): FrameColumn<TypeVariable(R)> defined in org.jetbrains.kotlinx.dataframe.DataFrame\n",
+      "public open fun <R> get(column: KProperty<DataRow<TypeVariable(R)>>): ColumnGroup<TypeVariable(R)> defined in org.jetbrains.kotlinx.dataframe.DataFrame\n",
+      "public open operator fun get(first: AnyColumnReference /* = ColumnReference<*> */, vararg other: AnyColumnReference /* = ColumnReference<*> */): DataFrame<Line_9_jupyter._DataFrameType> defined in org.jetbrains.kotlinx.dataframe.DataFrame\n",
+      "public open fun <C> get(column: ColumnSelector<Line_9_jupyter._DataFrameType, TypeVariable(C)> /* = ColumnsSelectionDsl<Line_9_jupyter._DataFrameType>.(it: ColumnsSelectionDsl<Line_9_jupyter._DataFrameType>) -> SingleColumn<TypeVariable(C)> */): DataColumn<TypeVariable(C)> defined in org.jetbrains.kotlinx.dataframe.DataFrame\n",
+      "public open fun <C> get(columns: ColumnsSelector<Line_9_jupyter._DataFrameType, TypeVariable(C)> /* = ColumnsSelectionDsl<Line_9_jupyter._DataFrameType>.(it: ColumnsSelectionDsl<Line_9_jupyter._DataFrameType>) -> ColumnSet<TypeVariable(C)> */): List<DataColumn<TypeVariable(C)>> defined in org.jetbrains.kotlinx.dataframe.DataFrame\n",
+      "public open fun <R> get(column: DataColumn<TypeVariable(R)>): DataColumn<TypeVariable(R)> defined in org.jetbrains.kotlinx.dataframe.DataFrame\n",
+      "public open fun <R> get(column: DataColumn<DataFrame<TypeVariable(R)>>): FrameColumn<TypeVariable(R)> defined in org.jetbrains.kotlinx.dataframe.DataFrame\n",
+      "public open fun <R> get(column: DataColumn<DataRow<TypeVariable(R)>>): ColumnGroup<TypeVariable(R)> defined in org.jetbrains.kotlinx.dataframe.DataFrame\n",
+      "public open fun get(columnPath: ColumnPath): AnyCol /* = DataColumn<*> */ defined in org.jetbrains.kotlinx.dataframe.DataFrame\n",
+      "public open fun <R> get(column: ColumnReference<TypeVariable(R)>): DataColumn<TypeVariable(R)> defined in org.jetbrains.kotlinx.dataframe.DataFrame\n",
+      "public open fun <R> get(column: ColumnReference<DataFrame<TypeVariable(R)>>): FrameColumn<TypeVariable(R)> defined in org.jetbrains.kotlinx.dataframe.DataFrame\n",
+      "public open fun <R> get(column: ColumnReference<DataRow<TypeVariable(R)>>): ColumnGroup<TypeVariable(R)> defined in org.jetbrains.kotlinx.dataframe.DataFrame\n",
+      "Line_85.jupyter.kts (1:3 - 15) No get method providing array access\n",
+      "Line_85.jupyter.kts (1:4 - 14) Too many characters in a character literal ''duration''"
+     ]
+    }
+   ],
+   "source": [
+    "df['duration']. quantile(0.25)"
    ]
   },
   {
