application health check

--- a/notebooks/tips.ipynb
+++ b/notebooks/tips.ipynb
@@ -16,6 +16,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "27117a24-004e-4b06-9452-20b1d9fdbeeb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dfRaw=dfRaw.convert { startedAt }.toLocalDateTime(kotlinx.datetime.TimeZone.UTC)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "9741ae9f-7331-4a4f-a6e5-9eb2d1f1f5a1",
    "metadata": {},
    "outputs": [],
