--- a/notebooks/gc-log-interpreter.ipynb
+++ b/notebooks/gc-log-interpreter.ipynb
@@ -24,24 +24,75 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d53f5cc6-2be4-4886-aec1-e5c39e5eedc7",
+   "metadata": {},
+   "source": [
+    "In the case of G1 GC, we can distinguish between four main types of garbage collection cycles:\n",
+    "\n",
+    "  <table style=\"align:left;border:1px solid gray; text-align:left; margin-right:auto;margin-left:0px\">\n",
+    "    <tr>\n",
+    "        <td width=\"50%\">young collection cycle</td>\n",
+    "        <td>During this collection, GC pauses the application threads to move live objects from the young regions into survivor regions or promote them into old regions</td>\n",
+    "    </tr>       \n",
+    "       <tr>\n",
+    "        <td width=\"50%\">mixed collection cycle</td>\n",
+    "        <td>During this collection  the steps of the young collection are carried out and, in addition G1 GC additionaly moves live objects from some old regions to free ones, which become a part of the old generation. Single mixed collection is similar to a young collection pause. Sometimes, there could be more tha one mixed collection pause. This is called a mixed collection cycle.</td>\n",
+    "    </tr>\n",
+    "     <tr>\n",
+    "        <td width=\"50%\">multistage concurrent marking cycle</td>\n",
+    "        <td>This collection is run, when the old generation occupancy reaches the threshold. During this stage G1 GC calculates the amount of live objects per old region, and ranks the old regions.</td>\n",
+    "     </tr>\n",
+    "    <tr>\n",
+    "        <td width=\"50%\">full garbage collection pause</td>\n",
+    "        <td>  </td>\n",
+    "    </tr>\n",
+    "</table>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4ee521a4-d845-4bf9-b27d-9427a306c650",
+   "metadata": {},
+   "source": [
+    "<img style=\"float: left; margin-right:20px;\" src=\"gclog.png\"> "
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6d0d2ff2-6e64-473b-ad4f-1b0aa6a6b9a5",
    "metadata": {},
    "source": [
-    "<p style=\"text-align:left; border:1px solid green; display:block;\">\n",
-    "<table style=\"border:1px solid red; display:block;\">\n",
+    "\n",
+    "<table style=\"align:left;border:1px solid gray; text-align:left; margin-right:auto;margin-left:0px\">\n",
     "    <tr>\n",
-    "        <td>Phase</td>\n",
+    "        <td width=\"50%\">GC Cause</td>\n",
     "        <td>Description</td>\n",
     "    </tr>\n",
     "    <tr>\n",
-    "        <td>ala ma kota</td>\n",
-    "        <td>i dwa psy</td>\n",
+    "        <td>G1 Evacuation Pause</td>\n",
+    "        <td>TODO</td>\n",
     "    </tr>\n",
-    "</table>    \n",
-    "</p>\n",
-    "<img style=\"float: left; margin-right:20px;\" src=\"idea.png\">  **Tip:** _(screen from artcicle [Monday with JVM logs - G1GC Stop-the-world phases](https://krzysztofslusarski.github.io/2021/08/10/monday-phases.html))_\n",
-    "\n",
-    "![](gc_causes.png)"
+    "     <tr>\n",
+    "        <td>G1 Humongous Allocation</td>\n",
+    "        <td>TODO</td>\n",
+    "    </tr>\n",
+    "     <tr>\n",
+    "        <td>GCLocker Initiated GC </td>\n",
+    "        <td>TODO</td>\n",
+    "    </tr>\n",
+    "    <tr>\n",
+    "        <td>Metadata GC Threshold </td>\n",
+    "        <td>TODO</td>\n",
+    "    </tr>\n",
+    "      <tr>\n",
+    "        <td>System.gc() </td>\n",
+    "        <td>TODO</td>\n",
+    "    </tr>\n",
+    "       <tr>\n",
+    "        <td>Heap Inspection Initiated GC</td>\n",
+    "        <td>TODO</td>\n",
+    "    </tr>\n",
+    "</table>"
    ]
   },
   {
