--- a/notebooks/gc-log-interpreter.ipynb
+++ b/notebooks/gc-log-interpreter.ipynb
@@ -27,7 +27,22 @@
    "id": "d53f5cc6-2be4-4886-aec1-e5c39e5eedc7",
    "metadata": {},
    "source": [
-    "In the case of G1 GC, we can distinguish between four main types of garbage collection cycles:\n",
+    "The Garbage Collector is a JVM process specialized for allocating and releasing memory. It works in the background and is completely invisible to the programmer.\n",
+    "The Garbage Collector analyzes the links between objects, finds those that are not necessary, and then removes them.\n",
+    "\n",
+    "The Garbage Collector cannot afford to clean the entire available memory area. Such an operation would be long-term and would have a negative impact on the performance of the entire application. \n",
+    "\n",
+    "Thats why memory is divided into regions - called generations (young and old). The young generation is divided into several internal areas, called eden, survivor0, survivor1. In each of these areas, objects of a certain maturity are stored.New objects are created in the eden space, while the oldest objects ultimately end up in the old space. \n",
+    "\n",
+    "Each generation can be clean in separate cycles - we call them collections. During these cycles, the Garbage Collector moves the used objects to areas with higher stability.\n",
+    "\n",
+    "<img style=\"margin-right:20px;\" src=\"gcgeneration.png\"> \n",
+    "\n",
+    "<img style=\"float: left; margin-right:20px;\" src=\"idea.png\">  **Tip:** These divisions result from the concept on which the Garbage Collector is based - the generation hypothesis. It assumes that the latest created objects become unnecessary the fastest. Objects that survive several cleaning cycles become stable and are less likely to be removed.\n",
+    "\n",
+    "<div style=\"clear:both\"></div>\n",
+    "\n",
+    "In the case of G1 GC, we can distinguish between four main types collection cycles:\n",
     "\n",
     "  <table style=\"align:left;border:1px solid gray; text-align:left; margin-right:auto;margin-left:0px\">\n",
     "    <tr>\n",
@@ -46,7 +61,9 @@
     "        <td width=\"50%\">full garbage collection pause</td>\n",
     "        <td>  </td>\n",
     "    </tr>\n",
-    "</table>"
+    "</table>\n",
+    "\n",
+    "<img style=\"float: left; margin-right:20px;\" src=\"idea.png\">  **Tip:** You can find a detailed description of how the GC works in the book [Java® Performance Companion](https://www.oreilly.com/library/view/java-performance-companion/9780133796896)"
    ]
   },
   {
