--- a/notebooks/gc-log-interpreter.ipynb
+++ b/notebooks/gc-log-interpreter.ipynb
@@ -63,8 +63,32 @@
     "    </tr>\n",
     "</table>\n",
     "\n",
-    "<img style=\"float: left; margin-right:20px;\" src=\"idea.png\">  **Tip:** You can find a detailed description of how the GC works in the book [Java® Performance Companion](https://www.oreilly.com/library/view/java-performance-companion/9780133796896)"
+    "<img style=\"float: left; margin-right:20px;\" src=\"idea.png\">  **Tip:** You can find a detailed description of how the GC works in the book [Java® Performance Companion](https://www.oreilly.com/library/view/java-performance-companion/9780133796896)\n",
+    "\n",
+    "<div style=\"clear:both\"></div>\n",
+    "\n",
+    "Some collections (or collection stages) have a particularly large impact on the application's performance because they require threads to stop - we call them GC pauses (or stop-the-world-phase). During these pauses, our application is stopped and does not perform its tasks!\n",
+    "\n",
+    "For a well-functioning Garbage Collector, pauses should be as short as possible, and as much memory as possible should be freed up as a result.\n",
+    "\n",
+    "Unfortunately, the Garbage Collector does not always work well. \n",
+    "\n",
+    "Sometimes you may find that application pauses happen too often, or last too long. As a result, our application slows down and performance problems that are difficult to diagnose occur.\n",
+    "\n",
+    "In another scenario, the malfunctioning of the Garbage Collector leads to memory leaks. These occur when memory release is inefficient. The Garbage Collector (due to various possible reasons) cannot delete objects that should be discarded. This results in the gradual consumption of all available memory.\n",
+    "\n",
+    "In both cases, the consequences can be very serious. As programmers, we need to be prepared for them and know how to deal with them.\n",
+    "\n",
+    "A powerful tool that we can use is the Garbage Collector log. This is a text file that is a set of the operations it performs.  "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f9e7844c-576c-4664-b744-b395b47c923a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
