--- a/notebooks/gc-log-interpreter.ipynb
+++ b/notebooks/gc-log-interpreter.ipynb
@@ -79,7 +79,7 @@
     "\n",
     "In both cases, the consequences can be very serious. As programmers, we need to be prepared for them and know how to deal with them.\n",
     "\n",
-    "A powerful tool that we can use is the Garbage Collector log. This is a text file that is a set of the operations it performs.  "
+    "A powerful tool we have in our toolbox is the Garbage Collector log. This is a text file that is a log of the operations it performs.   "
    ]
   },
   {
